Update Heading.css to change font weight and family for h1 element

--- a/src/Heading/Heading.css
+++ b/src/Heading/Heading.css
@@ -26,10 +26,8 @@
 
 .heading .left-side h1 {
     font-size: 57px;
-    font-family: "Inter";
-    font-weight: bolder;
+    font-family: "Inter Semi Bold";
     color: rgb(223 223 214);
-    letter-spacing: -1px;
     margin: 25px 0;
 }
 
