--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -4,7 +4,7 @@ header {
     display: grid;
     grid-area: head;
     grid-template-columns: repeat(11, auto);
-    grid-template-areas: "logo search search . nav nav nav nav . icons";
+    grid-template-areas: "logo search search . . nav nav nav . icons";
     border-bottom: 1px solid transparent;
     padding: 0 30px;
     z-index: 4;
