--- a/src/Misc/Misc.css
+++ b/src/Misc/Misc.css
@@ -4,7 +4,8 @@
     width: 100%;
     column-gap: 12px;
     grid-template-columns: repeat(4, 21%);
-    margin: 0 auto;
+    margin: 80px auto;
+    padding: 0 0 50px 0;
     height: 200px;
     justify-content: center;
     z-index: 3;
@@ -30,7 +31,7 @@
     width: 50px;
     height: 50px;
     background: rgba(255, 255, 255, 0.05);
-    font-size: 25px;
+    font-size: 28px;
     border-radius: 10px;
 }
 
