--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -8,6 +8,13 @@ header {
     border-bottom: 1px solid transparent;
     padding: 0 30px;
     z-index: 4;
+    transition: all 0.2s;
+}
+
+.header-scrolled {
+    transition: all 0.2s;
+    background-color: #1a1a1a;
+    border-bottom: 1px solid #2e2e32;
 }
 
 header button.search {
